be/src/exec/hdfs-parquet-table-writer.cc
@@ -509,10 +509,8 @@ Status HdfsParquetTableWriter::BaseColumnWriter::Flush(int64_t* file_pos,
   for (int i = 0; i < num_data_pages_; ++i) {
     DataPage& page = pages_[i];
 
-    // Last page might be empty
     if (page.header.data_page_header.num_values == 0) {
-      DCHECK_EQ(page.header.compressed_page_size, 0);
-      DCHECK_EQ(i, num_data_pages_ - 1);
+      // Skip empty pages
       continue;
     }
 
